[refactor] #109 - 일부 서비스 로직 리팩토링